# loopr

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: quickstart.py
loopr/: __init__.py  cli.py  llm.py  loop.py  reflect.py  scorers.py  task.py  web.py
loopr/tasks/: extract_json.yaml  intent.yaml  sentiment.yaml  yesno.yaml
tests/: test_loop.py  test_reflect.py  test_scorers.py  test_task.py
